--- a/janus-frontend/package.json
+++ b/janus-frontend/package.json
@@ -37,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "puppeteer": "^24.37.3",
     "typescript": "~5.7.2"
   }
 }
