```markdown feat: implement Stage 3 - Internal Review, Preliquidation & Model Refactor
Backend:
- Refactor Operation model: replace `CargoType`/`InspectionType` with `TransportMode` (MARITIME/AIR) and `OperationCategory` (1/2/3)
- Implement Internal Review workflow with new statuses: `IN_REVIEW`, `PRELIQUIDATION_REVIEW`, `ANALYST_ASSIGNED`
- Add `PreliquidationService` for tax calculation and approval workflow (Technical & Final)
- Add `AnalystAssignmentService` for auto-assigning agents based on workload
- Update compliance rules: `HighValueAdditionalDocRule` now targets MARITIME; add `InternalReviewCompleteRule` and `PreliquidationApprovedRule`
- Enable internal-only comments and new alerts for missing critical docs/BL

Frontend:
- Update Operation Form: add BL/Container fields, arrival date, and conditional validation for Maritime mode
- Add Preliquidation component: tax summary display and approval/rejection actions
- Update Dashboard and Operation List: reflect new Transport/Category enums in filters and columns
- Add internal comment toggle and visual styling
- Update Progress Bar to support review sub-statuses
- Add CSV templates for Commercial Invoice and Packing List

Tests:
- Update integration tests to reflect new operation model, status transitions, and permission checks
```

--- a/janus-backend/src/main/resources/application.properties
+++ b/janus-backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ quarkus.http.cors.access-control-allow-credentials=true
 
 # --- Datasource (Dev - H2) ---
 %dev.quarkus.datasource.db-kind=h2
-%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:janusdb;DB_CLOSE_DELAY=-1
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:file:./data/janusdb;DB_CLOSE_DELAY=-1
 %dev.quarkus.datasource.username=sa
 %dev.quarkus.datasource.password=
 
@@ -32,7 +32,8 @@ quarkus.http.cors.access-control-allow-credentials=true
 %prod.quarkus.datasource.password=${DB_PASSWORD:janus}
 
 # --- Hibernate ORM ---
-quarkus.hibernate-orm.schema-management.strategy=drop-and-create
+%dev.quarkus.hibernate-orm.schema-management.strategy=update
+%test.quarkus.hibernate-orm.schema-management.strategy=drop-and-create
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.sql-load-script=import.sql
 %prod.quarkus.hibernate-orm.schema-management.strategy=update
