--- a/janus-backend/src/main/resources/application.properties
+++ b/janus-backend/src/main/resources/application.properties
@@ -61,6 +61,9 @@ janus.storage.max-file-size=10485760
 janus.alerts.inactivity-hours=48
 janus.alerts.deadline-approaching-hours=24
 
+# --- Inspection ---
+janus.notification.inspection-photo-email=customs-team@janus.com
+
 # --- OpenAPI ---
 quarkus.smallrye-openapi.info-title=Janus API
 quarkus.smallrye-openapi.info-version=1.0.0
