--- a/janus-backend/src/main/resources/application.properties
+++ b/janus-backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.http.port=8080
 # --- CORS ---
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:4200
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.methods=GET,POST,PUT,PATCH,DELETE,OPTIONS
 quarkus.http.cors.headers=Authorization,Content-Type,Accept
 quarkus.http.cors.exposed-headers=Content-Disposition
 quarkus.http.cors.access-control-allow-credentials=true
