declaracion puede ser aprobada por el cliente

--- a/janus-backend/src/main/resources/application.properties
+++ b/janus-backend/src/main/resources/application.properties
@@ -68,3 +68,6 @@ janus.notification.inspection-photo-email=customs-team@janus.com
 quarkus.smallrye-openapi.info-title=Janus API
 quarkus.smallrye-openapi.info-version=1.0.0
 quarkus.smallrye-openapi.info-description=Janus Customs Management System API
+
+# --- Frontend URL ---
+janus.app.frontend-url=http://localhost:4200
